<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/purple_200">
    <ImageView
        android:id="@+id/image_view"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/img2"
        app:layout_constraintHorizontal_bias=".3"
        app:layout_constraintVertical_bias=".3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/waiter_station"
        android:textColor="@color/pink"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/image_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/image_view"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0"
        android:gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/pink"
        app:layout_constraintHorizontal_bias="1"
        android:layout_marginRight="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_view"
        app:layout_constraintTop_toTopOf="@+id/text_view"/>

    <TextView
        android:id="@+id/text_view_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Home"
        android:textSize="42sp"
        android:textColor="@color/pink"
        android:fontFamily="sans-serif-light"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/image_view"
        app:layout_constraintTop_toBottomOf="@+id/image_view"/>

    <TextView
        android:id="@id/text_view_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Delivery"
        android:fontFamily="sans-serif-condensed"
        android:textSize="56sp"
        android:textColor="@color/pink"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/text_view_2"
        app:layout_constraintTop_toBottomOf="@+id/text_view_2"/>

    <TextView
        android:id="@+id/text_view_4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textColor="@color/pink"
        android:layout_marginTop="5dp"
        android:text="@string/all_you_need_to_do_is_order_you_favourite_food_right_from_your_device"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/text_view_3"
        app:layout_constraintTop_toBottomOf="@+id/text_view_3"
        app:layout_constraintVertical_bias=".1"
        app:layout_constraintWidth_percent=".5" />

    <ImageView
        android:layout_width="50dp"
        android:layout_height="10dp"
        android:src="@drawable/tab2"
        app:layout_constraintHeight_percent=".6"
        app:layout_constraintHorizontal_bias="0"
        android:layout_marginLeft="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/text_view_4"
        app:layout_constraintTop_toBottomOf="@id/text_view_4"/>

</androidx.constraintlayout.widget.ConstraintLayout>